--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Alura</title>
+    <link rel="stylesheet" href="#style.css">
 </head>
 
 <body>
-    <img src="" alt="foto da barbearia">
+    <img src="banner[1].jpg" alt="foto da barbearia">
     h1
 </body>
 </html>
