largura da forma

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Alura</title>
     <link rel="stylesheet" href="#style.css">
 </head>
-
 <body>
-    <img src="banner[1].jpg" alt="foto da barbearia">
-    h1
+    <img class="banner[1].jpg" alt="foto da barbearia">
+    h1 Sobre a barbearia Alura</h1>
+</p> a educação étnico do Brasil: </strong> a melhora na educação </strong></body></p>
+   mas não vem sendo aplicada corretamente nas escolas: Existem debates e iniciativas em prol de uma educação antirracista
 </body>
 </html>
