largura da foto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <img class="banner[1].jpg" alt="foto da barbearia">
     h1 Sobre a barbearia Alura</h1>
-</p> a educação étnico do Brasil: </strong> a melhora na educação </strong></body></p>
-   mas não vem sendo aplicada corretamente nas escolas: Existem debates e iniciativas em prol de uma educação antirracista
+</p> a educação étnico do Brasil: </strong> a melhora na educação do Brasil. </strong></body></p>
+   mas não vem sendo aplicada corretamente nas escolas: Existem debates e iniciativas em prol de uma educação antirracista, além de comissoẽs nacionais relacionadas
+</p>
 </body>
+
 </html>
