--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-pt-br"
 
-<head>
+</head>
     <meta charset="UTF-8">
     <title>Barbearia Alura</title>
     <link rel="stylesheet" href="#style.css">
 </head>
 <body>
-    <img class="banner[1].jpg" alt="foto da barbearia">
-    h1 Sobre a barbearia Alura</h1>
-</p> a educação étnico do Brasil: </strong> a melhora na educação do Brasil. </strong></body></p>
-   mas não vem sendo aplicada corretamente nas escolas: Existem debates e iniciativas em prol de uma educação antirracista, além de comissoẽs nacionais relacionadas
-</p>
+    <img class="banner ssrc=banner[1].jpg" alt="imagem da barbearia">
+</h1> Sobre a barbearia Alura </h1>
+</p>Localizada no coração da cidade a <strong> Barbearia Alura </strong> traz para o mercado o que á de melhor para o seu cabelo e barba. Fundada em 2019 a barbearia
+</p><em>Nossa missão é:"proporcionar autoestima e qualidade de vida aos clientes". </em></p>
+<p>Oferecemos profissionais experientes e antenados nas mudanças do mundo e da moda. O antendimento possui o padrão de excelência e agilidade
 </body>
-
 </html>
