--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <img class="banner ssrc=banner[1].jpg" alt="imagem da barbearia">
 </h1> Sobre a barbearia Alura </h1>
-</p>Localizada no coração da cidade a <strong> Barbearia Alura </strong> traz para o mercado o que á de melhor para o seu cabelo e barba. Fundada em 2019 a barbearia
+</p>Localizada no coração da cidade a <strong> Barbearia Alura </strong> traz para o mercado o que á de melhor para o seu cabelo e barba.
 </p><em>Nossa missão é:"proporcionar autoestima e qualidade de vida aos clientes". </em></p>
-<p>Oferecemos profissionais experientes e antenados nas mudanças do mundo e da moda. O antendimento possui o padrão de excelência e agilidade
+<p>Oferecemos profissionais experientes e antenados nas mudanças do mundo e da moda. O antendimento possui o padrão de excelência e agilidade que nossos clientes merecem.
 </body>
 </html>
